@@ -1,3 +1,5 @@
+** Added routine gsl_linalg_cholesky_invert
+
 ** Fixed a bug the simplex algorithm which caused the second highest
    point to be incorrectly equal to the first when the first value was
    the highest, which could cause suboptimal convergence (bug #23192).
